# IZTECH-Master-Thesis-Project

./: .gitignore  Master_Thesis_Next_Phases_Roadmap.docx  README.md  advisor_presentation.tex  advisor_presentation_old.tex  extract_coefficients.py  fill_matrix.sh  pyproject.toml  requirements.txt  run_stage4_range_aware.py  run_staged_lpan.py  setup_runpod.sh
IZTECH_Master_Thesis/: iztechthesis.cls  main.tex  references.bib  synthesizer_lpan_overview.tex
IZTECH_Master_Thesis/chapters/: 1_introduction.tex  2_background.tex  3_methodology.tex  4_results.tex  5_conclusion.tex
IZTECH_Master_Thesis/frontmatter/: abbreviations.tex  abstract.tex  ozet.tex  symbols.tex
configs/hyper_lpan/: mrpc_base.yaml  qnli_base.yaml  rte_base.yaml  sst2_base.yaml
docs/: 00_PROJECT_OVERVIEW.md  01_ARCHITECTURE.md  02_FHE_PROTOCOL.md  03_THREAT_MODEL.md  04_EXTENSIONS.md  04_OPTIMIZATIONS.md  05_REPRODUCING_RESULTS.md  06_HARDWARE.md  07_REPO_LAYOUT.md  08_TRAINING_EXPERIMENT_ROADMAP.md  FHE_INFERENCE_OPTIMIZATION_PLAN.md  HyPER_LPAN_Reading_Companion.tex  MSI_HANDOFF.md  README.md  TECHNIQUES_JOURNEY.md  ckks_protocol.md
experiments/: 03_activation_profiling.py  04_bert_tiny_sst2_pipeline.py  05_multi_model_scaling.py  07_encrypted_inference.py  09_poly_eval_strategies.py  10_multi_dataset_glue.py  11_lpan_training.py  12_lpan_fhe_protocol.py  13_lpan_fhe_attention.py  audit_fhe_readiness.py  export_synth_lpan.py  finetune_hybrid_progressive.py  finetune_linear_mixing.py  finetune_linear_mixing_progressive.py  generate_figures.py  plot_pareto.py  run_analysis.py  run_e2e_openfhe.py  run_fhe_benchmark.py  run_protocol.py  run_staged_lpan.py  run_synth_lpan_stage4.py  select_composition.py  train_hyper_lpan.py  validate_block_accuracy.py  validate_e2e_hybrid.py  validate_e2e_openfhe.py  validate_e2e_spo.py  validate_encrypted_accuracy.py
experiments/analysis/: activation_profiling.py  error_propagation.py  poly_approximation.py
fhe_thesis/: __init__.py  config.py  tasks.py
fhe_thesis/benchmarks/: __init__.py  accuracy.py  latency.py
fhe_thesis/encryption/: __init__.py  attention.py  backend.py  bootstrap_scheduler.py  checkpoint.py  coefficients.py  colmajor.py  context.py  depth.py  elimination.py  heongpu_backend.py  hybrid_coefficients.py  layernorm.py  linear.py  matrix_packing.py  mm_nexus.py  multi.py  openfhe_backend.py  ops.py  ops_attention_nexus.py  ops_matrix.py  packing.py  protocol.py
fhe_thesis/encryption/heongpu_bindings/: CMakeLists.txt  __init__.py  bindings.cpp  build.sh  smoke_test.py  smoke_test_phase2.py
fhe_thesis/encryption/heongpu_bindings/build_heongpu_py/: .ninja_deps  .ninja_log  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  build.ninja  cmake_install.cmake
fhe_thesis/encryption/heongpu_bindings/build_heongpu_py/_HEonGPU_build/: cmake_install.cmake  cmake_uninstall.cmake
fhe_thesis/encryption/heongpu_bindings/build_heongpu_py/_HEonGPU_build/src/: cmake_install.cmake
fhe_thesis/encryption/heongpu_bindings/build_heongpu_py/rapids-cmake/rmm-exports/install/: package_CCCL.cmake  package_nvtx3.cmake
fhe_thesis/models/: __init__.py  activations.py  backbone.py  hybrid_attention.py  linear_mixing.py  lpan_loader.py  profiling.py  quad_attention.py  replacement.py
fhe_thesis/optimization/: __init__.py  composition_selector.py
fhe_thesis/pipelines/: __init__.py  hyper_lpan.py
fhe_thesis/poly/: __init__.py  approximation.py  chebyshev.py  learnable.py  squared_softmax.py
fhe_thesis/training/: __init__.py  checkpoints.py  export_synth_lpan.py  run_staged_lpan.py  run_synth_lpan.py  trainer.py
heongpu_patches/: build_phase8a.sh  multiply_power_of_x.cu
logs/matrix/: _status.txt
research_papers/_txt/: AutoFHE- Automated Adaption of CNNs.txt  BOLT- Privacy-Preserving, Accurate and Efficient Inference for Transformers.txt  CryptoNets Applying Neural Networks to Encrypted Data.txt  DARTS_Differentiable_Architecture_Search.txt  Efficient_Homomorphic_Comparison_Methods_with_Optimal_Complexity.txt  Fast amortized bootstrappin.txt  Gantt_Chart_PDF.txt  High-Precision Bootstrapping of RNS-CKKS.txt  Homomorphic_Encryption_Standard_2018.txt  Homomorphic_Encryption_for_Arithmetic_of_Approximate_Numbers.txt  Iron Private Inference on Transformers.txt  Length_Adaptive_Transformer.txt  MPC_Former.txt  NEXUS_Secure_Transformer_Inference_Made_None_Interactive.txt  POWER-BERT.txt  THEF A Privacy-Preserving Framework for.txt  (+6 more)
scripts/: activate_pod_env.sh  bench_L128_multi_ct.py  bench_L128_multi_ct_cached.py  bench_L128_one_layer.py  bench_L128_one_layer_batched.py  bench_L128_synthesizer_lpan.py  bench_L64_streaming.py  bench_e2e_encoder.py  bench_heongpu_primitives.py  bench_matrix_1layer.py  bench_matrix_e2e.py  bench_matrix_linears_only.py  bench_matrix_steady_state.py  bench_nexus_coeff_matmul.py  bench_nexus_linear_vs_depth.py  bench_nexus_vs_production.py  bench_one_layer_L64_stream.py  bench_one_layer_colmajor.py  bench_one_layer_colmajor_L128.py  bench_one_layer_profile.py  bench_op_cost_vs_depth.py  bench_ring_primitives.py  debug_decompress_round0.py  debug_decompress_rounds.py  debug_matmul.py  diag_L128_memory.py  diag_linear_compressed.py  diagnose_add_levels.py  diagnose_lpan_ranges.py  diagnose_matrix_gpu.py  diagnose_per_block_rotate.py  estimate_nexus_e2e.py  eval_fp32_baselines.py  finalize_fhe_ready.sh  gate1_nexus_matmul_bench.py  h100_sweep.sh  measure_bootstrap_cost.py  measure_stoc_cost.py  openfhe_backend_parity.py  openfhe_smoke_bootstrap.py  (+75 more)
(+30 files in other folders)
