[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fhe_thesis"
version = "0.2.0"
description = "Synthesizer-LPAN: Single-GPU sub-100s FHE BERT inference via architectural elimination of Q, K, and softmax"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Gokay Gulsoy" },
]
keywords = [
    "fully-homomorphic-encryption",
    "ckks",
    "bert",
    "privacy-preserving-ml",
    "synthesizer-attention",
    "polynomial-activation-network",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Topic :: Security :: Cryptography",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Core runtime dependencies (everything required to import fhe_thesis
# and run plaintext training / polynomial fitting).
#
# NOTE: PyTorch is intentionally NOT pinned here — install the right
# CUDA build separately via:
#   pip install torch --index-url https://download.pytorch.org/whl/cu121
# then `pip install -e .` to pull the rest.
#
# The HEonGPU CUDA backend is vendored under third_party/HEonGPU/ and
# built by scripts/setup_pod_gpu.sh — not a PyPI dependency.
dependencies = [
    "numpy>=1.26,<3",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "matplotlib>=3.8",
    "transformers==4.43.4",
    "tokenizers==0.19.1",
    "datasets>=4.0",
    "accelerate>=1.0",
    "huggingface_hub>=0.30",
    "evaluate",
    "safetensors>=0.4",
    "tqdm",
]

[project.optional-dependencies]
# Reference CPU CKKS backend (TenSEALBackend in fhe_thesis/encryption/backend.py).
# Production benchmarks use the vendored HEonGPU CUDA backend instead.
tenseal = ["tenseal>=0.3.14"]

# Notebook / interactive analysis.
notebook = [
    "jupyterlab>=4",
    "ipykernel",
    "ipython",
]

# Developer tooling (formatters, linters, test runner).
dev = [
    "pytest>=7",
    "ruff>=0.5",
    "mypy>=1.8",
]

[project.urls]
Repository = "https://github.com/gokay-gulsoy/Iztech_Master_Thesis_Implementation"

[tool.setuptools.packages.find]
where = ["."]
include = ["fhe_thesis*"]
exclude = ["fhe_venv*", "third_party*", "results*", "logs*", "experiments*", "scripts*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]  # line length handled by formatter

[tool.pytest.ini_options]
testpaths = ["scripts"]
python_files = ["test_*.py"]
